minikube/green/deployment-green.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-app-green
  namespace: bank-app
  labels:
    version: green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-app
      namespace: bank-app
  template:
    metadata:
      labels:
        app: node-app
        namespace: bank-app
        version: green
    spec:
      containers:
        - name: node-app
          image: matheusmatias/node-project:0.0.3
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
