minikube/green/green-virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: node-service-stage-green
  namespace: bank-app
spec:
  gateways:
    - bank-app-gateway
  hosts:
    - "*"
  http:
    - match:
      - uri:
          prefix: /api
      route:
      - destination:
          host: api
          port:
            number: 3000
          subset: blue
        weight: 30
      - destination:
          host: api
          port:
            number: 3000
          subset: green
        weight: 70
